# tero

./: .gitignore  404.html  CONTRIBUTING.md  README.md  devbox.json  docker-compose.yml  index.html  package-lock.json  package.json
src/backend/: pyproject.toml  pytest.ini
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20251016-4c775a5d6fdc-test_case_suite.py  20251026-35ed17ab9ea1-configure_evaluator.py  20251029-9b4a5352b79c-test_case_result_name.py  20251107-43b41d53f861-make_test_case_id_nullable.py  20251117-f688dc4a2a9a-fix_global_team_name.py  20251119-897df88a29c9-threadmessage_status_update.py  20251122-8259088e28cf-remove_client_info_user_id.py  20251124-6733defeb310-add_team_editor_role.py  20251124-c759e1cf2817-background_suite_run.py  20251204-4f3f4b5477dd-optional_oauth_client_secret.py  20251219-5e943851d1d6-tool_auth_token_endpoint_auth_method.py  20251230-c3ae0aefa4d1-remove_icon_bg.py  20260107-cd7c53fb4cf7-rename_oath_token_table.py  20260205-613cc99427e2-qwen_2_5_1_5b_model.py  20260210-fd24763a078c-recursion_limit.py  20260211-8e9d8ca4dd0c-thread_message_origin_system.py  20260226-3170980dd69c-protected_agents.py  20260309-a1b2c3d4e5f6-add_claude_sonnet_4_6_and_opus_4_6.py  20260310-b8c4d2e6f1a3-migrate_4_models_to_5.py  20260313-c4d5e6f7a8b9-add_gpt_5_4_and_codex.py  20260406-d5e6f7a8b9c0-remove_cost_from_model_descriptions.py  20260422-e1f2a3b4c5d6-add_error_code_to_test_case_result.py
src/backend/tero/: api.py  mcp_server.py  secrets_cleanup.py
src/backend/tero/agents/: api.py  distribution.py  domain.py  field_generation.py  mcp_tools.py  repos.py  tool_file.py
src/backend/tero/ai_models/: ai_factory.py  api.py  aws_provider.py  azure_provider.py  domain.py  google_provider.py  openai_provider.py  vllm_provider.py
src/backend/tero/core/: api.py  auth.py  env.py  repos.py
src/backend/tero/external_agents/: api.py
src/backend/tero/files/: core.py  file_processor.py  file_quota.py  parser.py  pdf_processor.py
src/backend/tero/teams/: api.py  domain.py  repos.py
src/backend/tero/threads/: api.py  core.py  domain.py  (+4 more)
src/backend/tests/: cleanup_testcontainers.py  common.py  conftest.py  test_agent_distribution.py  test_agent_prompts.py  test_agents.py  test_config.py  test_evaluators.py  test_llm_models.py  test_teams.py  test_test_cases.py  test_threads.py  test_tools.py  test_transcript.py  test_usage.py  test_users.py
(+260 files in other folders)
