[project]
name = "tero"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.8,<0.122.0)",
    "uvicorn (>=0.34.0,<0.39.0)",
    "openai (>=2.8.1,<3.0.0)",
    "sse-starlette (>=3.0.3,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "sqlmodel (>=0.0.22,<0.1.0)",
    "langchain-openai (>=1.0.3,<2.0.0)",
    "langchain-core (>=1.0.7,<2.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-postgres (>=0.0.13,<0.0.17)",
    "chardet (>=5.2.0,<6.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "langchain-mcp-adapters (>=0.1.1,<0.2.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-tavily (>=0.2.4,<0.3.0)",
    "langchain-google-community (>=3.0.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain-aws (>=1.0.0,<2.0.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
    "fastapi-mcp (>=0.4.0,<1.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openevals (>=0.1.0,<0.2.0)",
    "json-schema-to-pydantic (>=0.4.3,<0.5.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    # Set mcp to fixed version because newer versions have conflicts with current implementation
    "mcp (>=1.22.0,<1.23.0)",
    "pypdfium2 (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.17.2"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
aiosqlite = "^0.21.0"
sqlparse = "^0.5.3"
freezegun = "^1.5.1"
testcontainers = {extras = ["postgres"], version = "^4.13.3"}
pyright = "^1.1.400"
alembic-postgresql-enum = "^1.8.0"
